slight css change to fix login button visibility

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -245,7 +245,7 @@ tbody tr:nth-child(odd) {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #6c7073;
     background-color: #ffffff;
   }
   a:hover {
